# browser-use-mcp-server

./: .bandit  .pylintrc  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  rd.md
.github/workflows/: python-publish.yml
server/: server.py
src/browser_use_mcp_server/: __init__.py  cli.py  server.py
